# scanning-xray-diffraction

./: .gitignore  CNAME  README.rst  objects.inv  reconstruct_grainshapes.py  requirements.txt  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  search.html  searchindex.js  serve_docs.sh
docs/source/: conf.py
docsource/: conf.py
examples/: bayesian_strain_regression.py  diffraction_analysis.py  wlsq_strian_regression.py
examples/example_data/: compliance.npy  example_grain_z0.flt  example_grain_z0.inp  example_grain_z0.ubi  example_grain_z1.flt  example_grain_z1.inp  example_grain_z1.par  example_grain_z1.ubi  example_grain_z10.flt  example_grain_z10.inp  example_grain_z10.ubi  example_grain_z11.flt  example_grain_z11.inp  example_grain_z11.ubi  example_grain_z12.flt  example_grain_z12.inp  example_grain_z12.ubi  example_grain_z2.flt  example_grain_z2.inp  example_grain_z2.ubi  example_grain_z3.flt  example_grain_z3.inp  example_grain_z3.ubi  example_grain_z4.flt  example_grain_z4.inp  example_grain_z4.ubi  example_grain_z5.flt  example_grain_z5.inp  example_grain_z5.ubi  example_grain_z6.flt  example_grain_z6.inp  example_grain_z6.ubi  example_grain_z7.flt  example_grain_z7.inp  example_grain_z7.ubi  example_grain_z8.flt  example_grain_z8.inp  example_grain_z8.ubi  example_grain_z9.flt  example_grain_z9.inp  (+1 more)
examples/example_results/: gp_strain.vtr  gp_strain_stds.vtr  strain_slice.vtr
s3dxrd/: __init__.py
s3dxrd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
s3dxrd/measurement/: Id11.py  raw_measurements.py
sources/: index.rst.txt
(+17 files in other folders)
