[metadata]
name = s3dxrd
version = 0.0.5
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = Tools for intragranular strain estimation with s3dxrd data.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://bitbucket.org/Axiomel/gp-xrd/src/multigrain/
project_urls =
    Documentation = https://bitbucket.org/Axiomel/gp-xrd/src/multigrain/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
